--- a/index.html
+++ b/index.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="../fonts/fonts.css">
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css" >
+    <link rel="stylesheet" href="./styles/global.css" >
+    <link rel="stylesheet" href="./styles/style.css" >
   </head>
   <body>
     <header class="header">
       <nav class="header-menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active" href=""> главная </a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#0"> главная </a>
           </li>
           <li class="header__links-list-item">
-            &nbsp;<a href="" class="header__link">посмотреть лоты </a>
+            <a href="#0" class="header__link">посмотреть лоты </a>
           </li>
           <li class="header__links-list-item">
-            &nbsp;&nbsp;<a href="" class="header__link">об аукционе </a>
+            <a href="#0" class="header__link">об аукционе </a>
           </li>
         </ul>
       </nav>
       <a class="header__logo">
-        <img class="header__logo-image" src="../images/logo-black.svg" alt="logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="ОНО ТЕБЕ НАДО"
+        >
       </a>
-      <address class="address__semantic">
-        <div class="address">
-          <p><a class="phone" href="tel:+99995555555">+9 999 555 5555</a> </p>
-          <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-          <p>наб. Принсенграхт 263-</p>265, Амстердам
-        </div>
+      <address class="address">
+        <p class="address__paragraph">
+          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        </p>
+        <p class="address__paragraph">
+          <a class="address__link" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
+        </p>
+        <p class="address__paragraph">наб. Принсенграхт 263-</p>
+        <p class="address__paragraph">265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">оно</span>
-          <span class="aligned-text_center">тебе</span>
-          <span class="aligned-text_right">надо</span>
+          <span class="cover__title-line cover__title-line_left">оно</span>
+          <span class="cover__title-line cover__title-line_center">тебе</span>
+          <span class="cover__title-line cover__title-line_right">надо</span>
         </h1>
         <div class="cover__description">
-          <span class="cover__description-text"
-            >Аукцион вещей, в которые никто не верил</span
-          >
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
           <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
         </div>
       </section>
       <section class="lots">
-        <div class="lots--container">
-          <h2 class="lots__heading">Лоты</h2>
-        </div>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -71,7 +78,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -89,7 +96,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a href="#0" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -98,43 +105,47 @@
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  котиков…Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
               </article>
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href=""
-          ><span class="lots__look-more-link-text">посмотреть больше</span></a
-        >
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="../images/logo-white.svg"
-            alt="надо ли оно тебе??"
+            src="./images/logo-white.svg"
+            alt="Оно тебе надо?"
           >
         </div>
         <div>
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
-            <p class="par-first">
+            <p class="about__paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно
               дорогого антиквариата. Наши лоты вообще не должны были попасть ни
               на один аукцион. Потому что кому нужен дневник девочки-подростка
               или картина, которую может нарисовать даже ребёнок? Кому нужны все
               эти странные вещи, созданные любителями?
             </p>
-            <p class="par-second">
+            <p class="about__paragraph">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              &nbsp; на критику, кажущуюся простоту или сложность, сейчас без
-              этих&nbsp;лотов невозможно представить современную культуру. Когда
-              в эти вещи не верил никто, продолжали верить их создатели. И
-              сейчас эти лоты стали культовыми.
+              <span class="about__text-part about__text-part_nowrap">
+                на критику,</span
+              >
+              кажущуюся простоту или сложность, сейчас
+              <span class="about__text-part about__text-part_nowrap"
+                >без этих лотов</span
+              >
+              невозможно представить современную культуру. Когда в эти вещи не
+              верил никто, продолжали верить их создатели. И сейчас эти лоты
+              стали культовыми.
             </p>
           </div>
         </div>
@@ -142,46 +153,53 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <p><a class="phone" href="tel:+99995555555">+9 999 555 5555</a></p>
-        <p><a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a></p>
-        <p>наб. Принсенграхт 263-265,</p>Амстердам
+        <p class="address__paragraph">
+          <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        </p>
+        <p class="address__paragraph">
+          <a class="address__link" href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a
+          >
+        </p>
+        <p class="address__paragraph">наб. Принсенграхт 263-265,</p>
+        <p class="address__paragraph">Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__links-list">
           <li class="footer__links-list-item">
-            <a class="footer__link footer__link_active" href="#">главная</a>
+            <a class="footer__link footer__link_active" href="#0">главная</a>
           </li>
           <li class="footer__links-list-item">
-            <a class="footer__link" href="#">посмотреть лоты</a>
+            <a class="footer__link" href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__links-list-item">
-            <a class="footer__link" href="#">об аукционе</a>
+            <a class="footer__link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#" target="_blank">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img
-              src="../images/yt.svg"
+              src="./images/yt.svg"
               alt="YouTube"
               class="footer__social-icon"
             >
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#" target="_blank">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img
-              src="../images/vk.svg"
+              src="./images/vk.svg"
               alt="ВКонтакте"
               class="footer__social-icon"
             >
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#" target="_blank">
+          <a class="footer__social-link" href="#0" target="_blank">
             <img
-              src="../images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="Pinterest"
               class="footer__social-icon"
             >
