--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <a class="footer__social-link" href="#0" target="_blank">
             <img
               src="./images/yt.svg"
-              alt="YouTube"
+              alt="Ютуб"
               class="footer__social-icon"
             >
           </a>
@@ -200,7 +200,7 @@
           <a class="footer__social-link" href="#0" target="_blank">
             <img
               src="./images/pinterest.svg"
-              alt="Pinterest"
+              alt="Пинтерест"
               class="footer__social-icon"
             >
           </a>
