--- a/index.html
+++ b/index.html
@@ -180,11 +180,7 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0" target="_blank">
-            <img
-              src="./images/yt.svg"
-              alt="Ютуб"
-              class="footer__social-icon"
-            >
+            <img src="./images/yt.svg" alt="Ютуб" class="footer__social-icon" >
           </a>
         </li>
         <li class="footer__social-list-item">
